KryptonSettings: update Russian translation
Edit string #191

--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -188,6 +188,6 @@
 
     <!-- Tiles on secure keyguard -->
     <string name="use_tiles_on_secure_keyguard_title">Требовать разблокировки для использования чувствительных плиток</string>
-    <string name="use_tiles_on_secure_keyguard_summary">Запрос на разблокировку экрана блокировки при использовании чувствительных плиток</string>
+    <string name="use_tiles_on_secure_keyguard_summary">Запрос на разблокировку экрана при использовании чувствительных плиток</string>
 	
 </resources>
