--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -189,4 +189,7 @@
     <string name="use_tiles_on_secure_keyguard_title">禁用开关</string>
     <string name="use_tiles_on_secure_keyguard_summary">在锁屏界面使用快速设置中按钮时将需要解锁手机</string>
 
+    <!-- NavBar Inverse -->
+    <string name="navigation_bar_inverse_title">反转导航栏</string>
+
 </resources>
