--- a/res/values-zh-rTW/strings.xml
+++ b/res/values-zh-rTW/strings.xml
@@ -189,4 +189,7 @@
     <string name="use_tiles_on_secure_keyguard_title">禁用開關</string>
     <string name="use_tiles_on_secure_keyguard_summary">在鎖屏介面使用快速設定中按鈕時將需要解鎖手機</string>
 
+    <!-- NavBar Inverse -->
+    <string name="navigation_bar_inverse_title">反轉導航欄</string>
+
 </resources>
