--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -19,18 +19,7 @@
 
     <!-- Theme settings -->
     <string name="theme_settings_title">Тема</string>
-    <string name="theme_settings_summary">Monet, Шрифт, Набор иконок</string>
-
-    <!-- Monet engine -->
-    <string name="monet_engine_settings_title">Движок Monet</string>
-    <string name="monet_engine_settings_summary">Собственный цвет, красочность, яркость</string>
-    <string name="accurate_shades_title">Использовать точные оттенки</string>
-    <string name="color_override_title">Пользовательский выбор цвета</string>
-    <string name="color_override_summary">"Выберите собственный цвет акцента, чтобы переопределить цвета, выбранные движком Monet."</string>
-    <string name="invalid_color_input">Неверный ввод цвета!</string>
-    <string name="chroma_factor_title">Красочность</string>
-    <string name="linear_lightness_title">Использовать пользовательскую шкалу яркости</string>
-    <string name="white_luminance_title">Яркость</string>
+    <string name="theme_settings_summary">Шрифт, Набор иконок</string>
 
     <!-- Title of the setting which enables overlays to customize headline and body fonts. -->
     <string name="theme_customization_font_title">Заголовок / Основной шрифт</string>
