--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -74,16 +74,7 @@
 
     <!-- QS Panel -->
     <string name="qs_settings_title">QS Panel</string>
-    <string name="qs_settings_summary">Brightness slider, Media artwork, Footer text</string>
-
-    <!-- Brightness slider -->
-    <string name="qs_brightness_category_title">Brightness slider</string>
-    <string name="qs_show_brightness_title">Show brightness slider in QS panel</string>
-    <string name="qqs_show_brightness_title">Show brightness slider in QQS panel</string>
-    <string name="qs_brightness_position_bottom_title">Bottom brightness slider</string>
-    <string name="qs_brightness_position_bottom_summary_on">Position: Bottom</string>
-    <string name="qs_brightness_position_bottom_summary_off">Position: Top</string>
-    <string name="qs_show_auto_brightness_button_title">Show auto brightness button</string>
+    <string name="qs_settings_summary">Media artwork, Footer text</string>
 
     <!-- Media artwork -->
     <string name="media_category">Media notification</string>
