--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -129,10 +129,7 @@
     <string name="location_privacy_indicator_title">Show privacy indicator for location</string>
 
     <!-- Miscellaneous -->
-    <string name="miscellaneous_settings_summary">Swipe to screenshot, Screenshot sound, Volume rocker</string>
-
-    <string name="three_finger_screenshot_title">Swipe to screenshot</string>
-    <string name="three_finger_screenshot_summary">Swipe down with three fingers to take a screenshot</string>
+    <string name="miscellaneous_settings_summary">Screenshot sound, Volume rocker</string>
 
     <!-- Screenshot shutter -->
     <string name="screenshot_shutter_sound_title">Screenshot sound</string>
