--- a/res/values-zh-rTW/strings.xml
+++ b/res/values-zh-rTW/strings.xml
@@ -163,4 +163,57 @@
 
     <!-- NavBar Inverse -->
     <string name="navigation_bar_inverse_title">反轉導航欄</string>
+
+    <!-- LiveDisplay -->
+    <string name="live_display_summary">基於當前時間和環境條件來最佳化您的螢幕以改善可讀性和減少視疲勞</string>
+    <string name="live_display_mode">顯示模式</string>
+    <string name="live_display_color_temperature_title">色溫</string>
+    <string name="live_display_color_temperature_summary">白天: <xliff:g id="day_temperature">%1$d</xliff:g>K  夜晚: <xliff:g id="night_temperature">%2$d</xliff:g>K</string>
+    <string name="live_display_color_temperature_label"><xliff:g id="degrees">%1$d</xliff:g>K</string>
+    <string name="live_display_day">白天</string>
+    <string name="live_display_night">夜晚</string>
+    <string name="live_display_outdoor_mode_title">自動戶外模式</string>
+    <string name="live_display_outdoor_mode_summary">在強烈的陽光下自動增加螢幕亮度和飽和度</string>
+    <string name="live_display_low_power_title">降低耗電</string>
+    <string name="live_display_low_power_summary">在不降低亮度的情況下調整螢幕使耗電最低</string>
+    <string name="live_display_enhance_color_title">增強色彩</string>
+    <string name="live_display_enhance_color_summary">為膚色、風景和其他影象提升色彩飽和度</string>
+    <string name="live_display_color_profile_title">顏色配置檔案</string>
+    <string name="live_display_color_profile_standard_title">標準</string>
+    <string name="live_display_color_profile_standard_summary">準確的顏色和明亮的白色</string>
+    <string name="live_display_color_profile_natural_title">自然</string>
+    <string name="live_display_color_profile_natural_summary">寫實的顏色和膚色</string>
+    <string name="live_display_color_profile_dynamic_title">動態</string>
+    <string name="live_display_color_profile_dynamic_summary">增強的顏色和明亮的白色</string>
+    <string name="live_display_color_profile_cinema_title">影院</string>
+    <string name="live_display_color_profile_cinema_summary">針對影片的完美色彩重現</string>
+    <string name="live_display_color_profile_astronomy_title">天文</string>
+    <string name="live_display_color_profile_astronomy_summary">夜視的深紅色</string>
+    <string name="live_display_color_profile_photography_title">攝影</string>
+    <string name="live_display_color_profile_photography_summary">針對照片的完美色彩重現</string>
+    <string name="live_display_color_profile_basic_title">基礎</string>
+    <string name="live_display_color_profile_basic_summary">使用未校準的顯示配置</string>
+    <string name="live_display_color_profile_adaptive_title">自適應</string>
+    <string name="live_display_color_profile_adaptive_summary">顏色根據環境條件自適應</string>
+    <string name="live_display_color_profile_reading_title">閱讀</string>
+    <string name="live_display_color_profile_reading_summary">使用暖色調以減少視疲勞</string>
+    <string name="live_display_color_profile_srgb_title">sRGB</string>
+    <string name="live_display_color_profile_srgb_summary">顏色校準到 sRGB 色彩空間</string>
+    <string name="live_display_color_profile_dci_p3_title">DCI-P3</string>
+    <string name="live_display_color_profile_dci_p3_summary">顏色校準到 DCI-P3 色彩空間</string>
+    <string name="live_display_reading_mode_title">閱讀模式</string>
+    <string name="live_display_reading_mode_summary">適合長時間閱讀的灰度模式</string>
+    <string name="color_calibration_title">顏色校準</string>
+    <string name="color_calibration_summary">校準螢幕顏色</string>
+    <string name="color_red_title">紅</string>
+    <string name="color_green_title">綠</string>
+    <string name="color_blue_title">藍</string>
+
+    <!-- LiveDisplay : Picture Adjustment -->
+    <string name="picture_adjustment_title">圖片調整</string>
+    <string name="picture_adjustment_summary">調整色相、飽和度、亮度和對比度</string>
+    <string name="adj_hue_title">色相</string>
+    <string name="adj_saturation_title">飽和度</string>
+    <string name="adj_intensity_title">亮度</string>
+    <string name="adj_contrast_title">對比度</string>
 </resources>
