--- a/res/values-zh-rTW/strings.xml
+++ b/res/values-zh-rTW/strings.xml
@@ -14,8 +14,9 @@
      limitations under the License.
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <!-- Krypton settings -->
+    <!-- Krypton Settings Title and Description -->
     <string name="krypton_settings_title">Krypton 設定</string>
+    <string name="krypton_settings_summary">主題，狀態列，快速設定，鎖屏</string>
 
     <!-- Theme settings -->
     <string name="theme_settings_title">主題</string>
