--- a/res/values-zh-rTW/strings.xml
+++ b/res/values-zh-rTW/strings.xml
@@ -216,4 +216,24 @@
     <string name="adj_saturation_title">飽和度</string>
     <string name="adj_intensity_title">亮度</string>
     <string name="adj_contrast_title">對比度</string>
+
+    <!-- App lock -->
+    <string name="app_lock_title">應用鎖</string>
+    <string name="app_lock_summary_singular">1 個受保護的應用</string>
+    <string name="app_lock_summary_plural"><xliff:g example="2" id="Number of applications">%1$d</xliff:g> 個受保護的應用</string>
+    <string name="app_lock_authentication_dialog_title">解鎖</string>
+    <string name="enable_debugging">啟用除錯</string>
+    <string name="disable_debugging">禁用除錯</string>
+    <string name="app_lock_packages_title">受保護的應用</string>
+    <string name="app_lock_packages_summary">選擇要用指紋解鎖或裝置憑證保護的應用程式</string>
+    <string name="app_lock_timeout_title">自動鎖定超時</string>
+    <string name="app_lock_timeout_summary">解鎖的應用到後臺後被鎖定的延遲</string>
+    <string name="app_lock_notifications_title">摺疊通知</string>
+    <string name="app_lock_notifications_summary">
+          當選定的應用程式被鎖定時，通知內容將被隱藏和摺疊。
+          浮動通知將被自動禁用。
+     </string>
+    <string name="app_lock_notifications_disabled_summary">請先選擇一個受保護應用</string>
+    <string name="app_lock_biometrics_allowed_title">啟用生物識別</string>
+    <string name="app_lock_footer_text">氣泡在超時後將會自動消失</string>
 </resources>
