--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -19,7 +19,18 @@
 
     <!-- Theme settings -->
     <string name="theme_settings_title">Tema</string>
-    <string name="theme_settings_summary">Fuente, Paquete de iconos</string>
+    <string name="theme_settings_summary">Monet, Fuente, Paquete de iconos</string>
+
+    <!-- Monet engine -->
+    <string name="monet_engine_settings_title">Motor Monet</string>
+    <string name="monet_engine_settings_summary">Color, Saturación y Brillo personalizados</string>
+    <string name="accurate_shades_title">Utilizar tonos precisos</string>
+    <string name="color_override_title">Selector de color personalizado</string>
+    <string name="color_override_summary">"Elija un color de acento personalizado para anular los colores elegidos por el motor monet"</string>
+    <string name="invalid_color_input">¡Entrada de color inválida!</string>
+    <string name="chroma_factor_title">Saturación</string>
+    <string name="linear_lightness_title">Utilizar una escala de luminosidad personalizada</string>
+    <string name="white_luminance_title">Brillo</string>
 
     <!-- Title of the setting which enables overlays to customize headline and body fonts. -->
     <string name="theme_customization_font_title">Encabezado / Fuente del cuerpo</string>
