--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -20,7 +20,21 @@
 
     <!-- Theme settings -->
     <string name="theme_settings_title">主题</string>
-    <string name="theme_settings_summary">字体，图标包</string>
+    <string name="theme_settings_summary">Monet，字体，图标包</string>
+
+    <!-- Monet engine -->
+    <string name="monet_engine_settings_title">Monet 引擎</string>
+    <string name="monet_engine_settings_summary">自定义颜色、色彩、亮度</string>
+    <string name="accurate_shades_title">调整界面色调</string>
+    <string name="color_override_title">自定义颜色</string>
+    <string name="color_override_default_summary">使用壁纸颜色</string>
+    <string name="custom_color_override_summary_placeholder">
+        已选择: <xliff:g example="#FF0000" id="Color">%1$s</xliff:g>。 设为空值来使用壁纸颜色。
+    </string>
+    <string name="invalid_color_input">颜色输入错误!</string>
+    <string name="chroma_factor_title">色彩</string>
+    <string name="linear_lightness_title">调整界面亮度</string>
+    <string name="white_luminance_title">亮度</string>
 
     <!-- Title of the setting which enables overlays to customize headline and body fonts. -->
     <string name="theme_customization_font_title">系统字体</string>
