--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -254,4 +254,8 @@
     <string name="app_lock_biometrics_allowed_title">Enable biometrics for unlocking</string>
     <string name="app_lock_footer_text">Bubbles will be automatically dismissed after timeout</string>
 
+    <!-- Three-fingers-swipe to screenshot -->
+    <string name="three_finger_gesture_title">Swipe to screenshot</string>
+    <string name="three_finger_gesture_summary">Swipe down with three fingers to take a screenshot</string>
+
 </resources>
