--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -250,4 +250,8 @@
     <string name="app_lock_notifications_disabled_summary">请先选择一个受保护应用</string>
     <string name="app_lock_biometrics_allowed_title">启用生物识别</string>
     <string name="app_lock_footer_text">气泡在超时后将会自动消失</string>
+    
+    <!-- Three-fingers-swipe to screenshot -->
+    <string name="three_finger_gesture_title">划动截屏</string>
+    <string name="three_finger_gesture_summary">三指下划以截取屏幕</string>
 </resources>
