--- a/res/values-zh-rCN/strings.xml
+++ b/res/values-zh-rCN/strings.xml
@@ -89,7 +89,7 @@
 
     <!-- QS Panel -->
     <string name="qs_settings_title">快速设置</string>
-    <string name="qs_settings_summary">音乐封面，页脚文本</string>
+    <string name="qs_settings_summary">音乐封面，亮度滑块，页脚文本</string>
 
     <!-- Media artwork -->
     <string name="media_category">音乐通知</string>
@@ -98,6 +98,14 @@
     <string name="artwork_media_background_enable_blur_title">背景模糊</string>
     <string name="artwork_media_background_blur_radius_title">背景模糊量</string>
     <string name="artwork_media_background_alpha_title">背景透明度</string>
+
+    <!-- Brightness slider -->
+    <string name="brightness_slider">亮度滑块</string>
+    <string name="qqs_show_brightness_title">在下拉快速设置面板中显示亮度滑块</string>
+    <string name="brightness_slider_position_title">亮度滑块位置</string>
+    <string name="top">顶部</string>
+    <string name="bottom">底部</string>
+    <string name="show_auto_brightness_button_title">自动亮度按钮</string>
 
     <!-- Disable QS -->
     <string name="disable_qs_title">隐藏快速设置</string>
